--- a/database/package.json
+++ b/database/package.json
@@ -1,6 +1,6 @@
 {
   "name": "database",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,11 +8,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@types/node": "^17.0.43",
     "prisma": "^3.15.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.15.1"
   }
 }
